spec/e2e/field/undefined.lit
type Foo {}
var foo = Foo();

foo.bar; # error: [line 4] Runtime error: Undefined property 'bar'.
